// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationChecklist render 0/1 complete 1`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0"
        type="button"
      >
        <div
          className="d-flex justify-content-between"
        >
          <span
            className="mr-2"
          >
            title1
          </span>
          <svg
            className="mdi-icon icon-inline text-muted"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 0/1 complete 2`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0"
        type="button"
      >
        <div
          className="d-flex justify-content-between"
        >
          <span
            className="mr-2"
          >
            title1
          </span>
          <svg
            className="mdi-icon icon-inline text-muted"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 1/1 complete 1`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0"
        type="button"
      >
        <div
          className="d-flex justify-content-between"
        >
          <span
            className="mr-2"
          >
            title1
          </span>
          <svg
            className="mdi-icon icon-inline text-success"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render loading 1`] = `
<div
  className="loading-spinner icon-inline my-2"
/>
`;
